# ChangeLog for media-libs/netpbm
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.109 2006/03/05 08:55:51 lu_zero Exp $

  05 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
  -files/netpbm-10.29-anytopnm.patch, -files/netpbm-10.29-build.patch,
  -files/netpbm-10.29-infinity.patch,
  -files/netpbm-10.29-pnmtopng-alpha-check.patch,
  -files/netpbm-dSAFER.patch, -netpbm-10.26.24.ebuild,
  -netpbm-10.26.25.ebuild:
  Cleanup

  01 Mar 2006; Marcelo Goes <vanquirius@gentoo.org>
  +files/netpbm-10.32-parallel.patch, netpbm-10.32.ebuild:
  Add Martin von Gagern <Martin dot vGagern at gmx dot net>'s patch to fix
  parallel compilation for bug 116665.

*netpbm-10.32 (28 Feb 2006)

  28 Feb 2006; Mike Frysinger <vapier@gentoo.org> +netpbm-10.32.ebuild:
  Version bump.

*netpbm-10.26.25 (20 Feb 2006)

  20 Feb 2006; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.25.ebuild:
  Version bump.

*netpbm-10.26.24 (09 Feb 2006)

  09 Feb 2006; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.24.ebuild:
  Version bump.

  02 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/netpbm-10.31-need-libm.patch, netpbm-10.31-r1.ebuild:
  Make sure we link against libm #121253 by Diego Pettenò.

  19 Jan 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/netpbm-10.31-parallel.patch, netpbm-10.31-r1.ebuild:
  Fixed compile problems in parallel, bug #116665

*netpbm-10.26.23 (16 Jan 2006)

  16 Jan 2006; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.23.ebuild:
  Version bump.

*netpbm-10.31-r1 (31 Dec 2005)

  31 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  +files/netpbm-10.19-message.patch,
  +files/netpbm-10.31-pnmtopng-modtime-segfault.patch,
  +netpbm-10.31-r1.ebuild:
  Fix segfault in pnmtopng #117180 by rgo and grab a patch from Fedora for
  giftopnm.

*netpbm-10.26.22 (28 Dec 2005)
