@@ -1,12 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 983a0d98d400cded392778d6334c3fb7 ChangeLog 15617
-RMD160 9449f4ecc4b42777a406dadc657b503a5c4db5b2 ChangeLog 15617
-SHA256 a31b8b15a8a2132b2d5bb1822d9c5e7e53c3aa20fa43b396ec3c918a0df0db11 ChangeLog 15617
+MD5 6c8e5b6253b9c809e28851277265632b ChangeLog 15740
+RMD160 28f276815d5b354de957590723c26df551a1122b ChangeLog 15740
+SHA256 56d215cde305674bfb21cb1d1d9f99c088e62a199c774295205c6fd514ead853 ChangeLog 15740
 MD5 0ddde32893ebaac2d3fb25e7b258202c files/digest-netpbm-10.26.25 509
 RMD160 43b0ce1241a32396b6a1bcf7492421b5e87c16a5 files/digest-netpbm-10.26.25 509
 SHA256 4cffdbdd12e81a734589972355414988a77f16fb01bcb7fcc702f7f414fd2e4f files/digest-netpbm-10.26.25 509
+MD5 159e29cd2afddab5b87ce78f7d3c26a5 files/digest-netpbm-10.26.26 509
+RMD160 9eb0636ccb4aa1a56c5bc48a34f350890cb1a767 files/digest-netpbm-10.26.26 509
+SHA256 549c0951ccc671f130982b70ef76de50c0dc6c18675ccca9de127a164988b745 files/digest-netpbm-10.26.26 509
 MD5 8c4a20ca06c83687436b8cb75917d5f1 files/digest-netpbm-10.29 62
 RMD160 17c24907f2d3e4a1a59479e1767609ad16586224 files/digest-netpbm-10.29 62
 SHA256 e3919e50f5e05f7221fae56eb27e057518e8180fceb0609639e4b9de30b8e0e1 files/digest-netpbm-10.29 62
@@ -58,6 +61,9 @@ SHA256 06e3a779a82014f8783ebfc67e1b11107bcb670aacdf1f81faa361642046ba23 metadata
 MD5 45f821277fc352f41b8877d1105104cd netpbm-10.26.25.ebuild 2809
 RMD160 7284222e9fcf3a55aeab04a50420341364c7fbf1 netpbm-10.26.25.ebuild 2809
 SHA256 dcfeeb62a863acab0516a2e1883b7cbc2c2c43b4b2fb8f9bbc8801f766af293b netpbm-10.26.25.ebuild 2809
+MD5 81d0bb86805e15c951e669e75b5c72bc netpbm-10.26.26.ebuild 2803
+RMD160 59c965086c4724e1c8e29bf677fb24a56fa9aa2c netpbm-10.26.26.ebuild 2803
+SHA256 64c3eb6e9760289e8f8652d43ca80dcf95e1a13d833b1fd10992d71bee0e22a3 netpbm-10.26.26.ebuild 2803
 MD5 44a56191027bdda13f3bd51f336a971a netpbm-10.29.ebuild 2423
 RMD160 0d4e834d6042b8f2da780be23001aedd5cd615b2 netpbm-10.29.ebuild 2423
 SHA256 0d31480585431af95a7623d28ea1fe9c37224f92f4169d4705e65e112f69e4b3 netpbm-10.29.ebuild 2423
@@ -73,7 +79,7 @@ SHA256 badbc1c51bc823ab1ee550b630bddb9802f633af6e7ab3178f0d6a86f9583895 netpbm-1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEGKYE2+ySkm8kpY0RAkqBAJ9QOjst3ChpnJA+NG0wXL23I49ktQCgof/U
-T8WI7elVxL/9lNmj/vmCjWs=
-=ATuN
+iD8DBQFEGKdh2+ySkm8kpY0RAtc/AJ47jJcQWHrpLiNa9wLXmwpGgkjDJgCfUEhI
+0FM6KMB/HUrFoQEi15B2Mok=
+=kLkS
 -----END PGP SIGNATURE-----
