@@ -1,0 +1,6 @@
+MD5 b6770fddeea53586a5f65d2468a8ca0b netpbm-10.26.26.tgz 2540667
+RMD160 26016f1f84bc0dfb112b4c6e703317f5cdfd9192 netpbm-10.26.26.tgz 2540667
+SHA256 6c0bc0288087eed2577ece3360464c63dce1b14d234c200605f6d3158336463c netpbm-10.26.26.tgz 2540667
+MD5 2d90a47369f74692aa24b773dfd6a122 netpbm-10.30-manpages.tar.bz2 233254
+RMD160 6312e1486f473f57332a5dc050a03ac1dfce7f47 netpbm-10.30-manpages.tar.bz2 233254
+SHA256 75eb6ceaebafffb6a2d608d49f2b61c5049e5795976bbfb2d55608de1f858124 netpbm-10.30-manpages.tar.bz2 233254
