@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.109 2006/03/05 08:55:51 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.110 2006/03/15 23:46:25 vapier Exp $
+
+*netpbm-10.26.26 (15 Mar 2006)
+
+  15 Mar 2006; Mike Frysinger <vapier@gentoo.org> +netpbm-10.26.26.ebuild:
+  Version bump.
 
   05 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
   -files/netpbm-10.29-anytopnm.patch, -files/netpbm-10.29-build.patch,
